# richcolorlog

./: .gitignore  .readthedocs.yaml  MANIFEST.in  README.md  __version__.py  build0.bat  pyproject.toml  setup.py
docs/: Makefile  changelog.rst  conf.py  configuration.rst  contributing.rst  index.rst  license.rst  requirements.txt
docs/_build/doctrees/: GUIDE.doctree  changelog.doctree  color_modes.doctree  configuration.doctree  contributing.doctree  custom_levels.doctree  environment.pickle  index.doctree  installation.doctree  license.doctree  quickstart.doctree  rabbitmq.doctree
docs/_build/doctrees/advanced/: filters.doctree  formatters.doctree  performance.doctree  syntax_highlighting.doctree
docs/_build/doctrees/api/: colors.doctree  formatters.doctree  handlers.doctree  logger.doctree  utilities.doctree
docs/_build/doctrees/handlers/: console.doctree  database.doctree  file.doctree  kafka.doctree  rabbitmq.doctree  syslog.doctree  zeromq.doctree
docs/_build/html/: .buildinfo  GUIDE.html  changelog.html  color_modes.html  configuration.html  contributing.html  custom_levels.html  genindex.html  index.html  installation.html  license.html  objects.inv  quickstart.html  rabbitmq.html  search.html  searchindex.js
docs/_build/html/_sources/: GUIDE.md.txt  color_modes.rst.txt  custom_levels.rst.txt  index.rst.txt  installation.rst.txt  quickstart.rst.txt
docs/_build/html/_static/: custom.css
docs/_build/html/advanced/: filters.html  formatters.html  performance.html  (+1 more)
docs/advanced/: formatters.rst  performance.rst  syntax_highlighting.rst
docs/api/: formatters.rst  handlers.rst  utilities.rst
docs/handlers/: database.rst  kafka.rst  zeromq.rst
richcolorlog/: README1.md  __init__.py  __main__.py  __version__.py  example_usage.py  logger.py  logger.py.1  logger.py.2  logger0.py  logger1.py  logger3.py  logger_debug_1.py  logger_debug_2.py  test.py  test_setup_logging.py  test_setup_logging_custom.py
(+20 files in other folders)
