[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "richcolorlog"
dynamic = ["version"]
description = "Beautiful, powerful logging with Rich, emoji icons, syntax highlighting, and multi-output support"
readme = {file = "README.md", content-type = "text/markdown"}
authors = [
    {name = "Hadi Cahyadi", email = "cumulus13@gmail.com"},
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Logging",
    "Environment :: Console",
]
keywords = ["logging", "rich", "color", "emoji", "syntax-highlighting", "rabbitmq", "kafka", "syslog", "database"]
requires-python = ">=3.8"
dependencies = [
    "rich>=10.0.0",
]

[project.optional-dependencies]
rabbitmq = ["pika>=1.0.0"]
kafka = ["kafka-python>=2.0.0"]
zmq = ["pyzmq>=20.0.0"]
db = [
    "psycopg2-binary>=2.8.0; sys_platform != 'win32'",
    "mysql-connector-python>=8.0.0",
]
all = [
    "pika>=1.0.0",
    "kafka-python>=2.0.0",
    "pyzmq>=20.0.0",
    "psycopg2-binary>=2.8.0; sys_platform != 'win32'",
    "mysql-connector-python>=8.0.0",
]

[project.urls]
Homepage = "https://github.com/cumulus13/richcolorlog"
Repository = "https://github.com/cumulus13/richcolorlog"
Bug Tracker = "https://github.com/cumulus13/richcolorlog/issues"

[tool.setuptools.dynamic]
version = {attr = "richcolorlog.__version__"}

[tool.setuptools.packages.find]
where = ["."]
include = ["richcolorlog*"]